--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
-version=3.6.0-SNAPSHOT
+version=4.0.0-SNAPSHOT
 
 org.gradle.caching=true
 org.gradle.parallel=true
 
 # Spring Dependencies
-springBootVersion=2.7.5
-springFrameworkVersion=5.3.23
+springBootVersion=3.0.0
+springFrameworkVersion=6.0.0
 
 # External Dependencies
 beanUtilsVersion=1.9.4
 
 # Test Dependencies
-springCloudContractVersion=3.1.3
+springCloudContractVersion=4.0.0-M5
 javaHamcrestVersion=2.0.0.0
 equalsVerifierVersion=3.10.1
 findbugsVersion=3.0.1
